# MAVCam

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Makefile-artosyn  Makefile-rockchip-32bit  Makefile-rockchip-64bit  README.md  version.h.in
.github/workflows/: build.yml
cmake/: arm-rockchip830-linux-uclibcgnueabihf.cmake  common.toolchain.cmake  gcc-arm-10.3-2021.07-x86_64-aarch64-none-linux.cmake  gcc-linaro-aarch64-linux.toolchain.cmake
debian/: changelog  control  copyright  rules
example/: CMakeLists.txt
example/camera_definition/: CMakeLists.txt  camera_definition.cpp
example/camera_operation/: CMakeLists.txt  camera_operation.cpp
example/client/: CMakeLists.txt  client.cpp
src/: CMakeLists.txt
src/base/: file_operation.cpp  file_operation.h  log.h  log_callback.h
src/camera_param/: camera_param.cc  camera_param.h
src/cmake/: compiler_flags.cmake
src/definition/: C10.xml  D64TR.xml
src/definition_file/: C10.xml
src/led_control/: led_control.cc  led_control.h
src/mav_client/: CMakeLists.txt  camera_client.cpp  camera_client.h  camera_local_client.cpp  camera_local_client.h  camera_rpc_client.cpp  camera_rpc_client.h  mav_client.cpp  mav_client.h  mav_client_bin.cpp
src/mav_server/: CMakeLists.txt  mav_server.cpp  mav_server.h  mav_server_bin.cpp  mid_server.h  mid_server_bin.cpp
src/mav_server/plugins/camera/: camera.cpp  camera.h  camera_impl.cpp  camera_impl.h  camera_service_impl.h
src/mav_watch/: CMakeLists.txt  mav_watch.cc
src/mid_client/: CMakeLists.txt  camera_client.cpp  camera_client.h  camera_local_client.cpp  camera_local_client.h  camera_rpc_client.cpp  camera_rpc_client.h  mid_client.cpp  mid_client.h  mid_client_bin.cpp
src/mid_server/: CMakeLists.txt  camera_service_impl.h  mid_server.cpp  mid_server_bin.cpp
src/mid_server/plugins/camera/: camera.cpp  camera.h  camera_impl.cpp  camera_impl.h  camera_service_impl.h
templates/mav_server/plugin_cpp/: call.j2  file.j2  request.j2  stream.j2
templates/mav_server/plugin_h/: call.j2  file.j2  request.j2  stream.j2
templates/mav_server/plugin_impl_cpp/: call.j2  file.j2  request.j2  stream.j2
templates/mav_server/plugin_impl_h/: call.j2  file.j2  request.j2  stream.j2
templates/mav_server/plugin_service_impl_h/: call.j2  enum.j2  file.j2  request.j2  stream.j2  struct.j2
tools/: fix_style.sh  generate_debian_changelog.sh  generate_from_protos.sh
